Replaces Phoenix libraries
Changed them to replay compatable

--- a/src/main/AdvantageScope_Assets/Robot_GoodGorilla/config.json
+++ b/src/main/AdvantageScope_Assets/Robot_GoodGorilla/config.json
@@ -1,5 +1,6 @@
 {
     "name": "GoodGorillaChassis",
+    "disableSimplification" : true,
     "rotations": [
     {
         "axis": "x",
@@ -15,7 +16,7 @@
       }
     ],
     "position": [0, 0, 0],
-
+    
     "cameras": [
         {
             "name": "reefCam",
